--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -37,6 +37,7 @@
 <script type="text/javascript" src=".././init.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="../util/util.js"></script>
+<script type="text/javascript" src="../util/array.js"></script>
 <script type="text/javascript" src="../util/colors.js"></script>
 <script type="text/javascript" src="../util/enums.js"></script>
 <script type="text/javascript" src="../util/errors.js"></script>
@@ -147,6 +148,7 @@
 <!-- Otre Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
 <!-- Util Tests -->
+<script type="text/javascript" src="../util/array_test.js"></script>
 <script type="text/javascript" src="../util/key_mappings_test.js"></script>
 <script type="text/javascript" src="../util/point_test.js"></script>
 <script type="text/javascript" src="../util/util_test.js"></script>
@@ -208,6 +210,7 @@ $(document).ready(function() {
   glift.utilTest();
   glift.util.pointTest();
   glift.keyMappingsTest();
+  glift.arrayTest();
 
   glift.themes.themesTest();
 
