--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src=".././init.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="../util/util.js"></script>
+<script type="text/javascript" src="../util/array.js"></script>
 <script type="text/javascript" src="../util/colors.js"></script>
 <script type="text/javascript" src="../util/enums.js"></script>
 <script type="text/javascript" src="../util/errors.js"></script>
