Fix comment box top to be flush with board.

--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -169,7 +169,9 @@
             widgetType: 'STANDARD_PROBLEM'
           },
           display: {
-            drawBoardCoords: true
+            drawBoardCoords: true,
+            disableZoomForMobile: true,
+            theme: 'COLORFUL'
           }
         });
         window.onresize = function() {
