add a fullWidgetBoxes method. Precursor to game info.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -171,6 +171,7 @@
 <script type="text/javascript" src="../displays/svg/pathutils_test.js"></script>
 <script type="text/javascript" src="../displays/svg/svgobj_test.js"></script>
 <!-- Displays position Tests -->
+<script type="text/javascript" src="../displays/position/widget_boxes_test.js"></script>
 <script type="text/javascript" src="../displays/position/widget_positioner_test.js"></script>
 <!-- Rules Tests -->
 <script type="text/javascript" src="../rules/autonumber_test.js"></script>
@@ -224,6 +225,7 @@ $(document).ready(function() {
   glift.displays.commentbox.sanitizeTest();
 
   glift.displays.position.widgetPositionerTest();
+  glift.displays.position.widgetBoxesTest();
 
   glift.displays.icons.wrappedIconTest();
 
