change problem tester theme.

--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -170,8 +170,8 @@
           },
           display: {
             drawBoardCoords: true,
-            disableZoomForMobile: true,
-            theme: 'COLORFUL'
+            disableZoomForMobile: true
+            // theme: 'COLORFUL' // useful for debugging box issues.
           }
         });
         window.onresize = function() {
