--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -26,6 +26,7 @@
 <script type="text/javascript" src="../util/test_util.js"></script>
 <!-- Dom -->
 <script type="text/javascript" src="../dom/dom.js"></script>
+<script type="text/javascript" src="../dom/sanitize.js"></script>
 <!-- Ajax -->
 <script type="text/javascript" src="../ajax/ajax.js"></script>
 <!-- Themes -->
@@ -59,7 +60,6 @@
 <!-- Displays commentbox -->
 <script type="text/javascript" src="../displays/commentbox/commentbox.js"></script>
 <script type="text/javascript" src="../displays/commentbox/create.js"></script>
-<script type="text/javascript" src="../displays/commentbox/sanitize.js"></script>
 <!-- Displays gui -->
 <script type="text/javascript" src="../displays/gui/gui.js"></script>
 <script type="text/javascript" src="../displays/gui/center.js"></script>
