Add touch events for game info, change touchstart to touchend for other events.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -44,6 +44,7 @@
 <script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
+<script type="text/javascript" src="../util/object.js"></script>
 <script type="text/javascript" src="../util/performance.js"></script>
 <script type="text/javascript" src="../util/platform.js"></script>
 <script type="text/javascript" src="../util/point.js"></script>
@@ -150,6 +151,7 @@
 <!-- Util Tests -->
 <script type="text/javascript" src="../util/array_test.js"></script>
 <script type="text/javascript" src="../util/key_mappings_test.js"></script>
+<script type="text/javascript" src="../util/obj_test.js"></script>
 <script type="text/javascript" src="../util/point_test.js"></script>
 <script type="text/javascript" src="../util/util_test.js"></script>
 <!-- Dom Tests -->
@@ -212,6 +214,7 @@ $(document).ready(function() {
   glift.util.pointTest();
   glift.keyMappingsTest();
   glift.arrayTest();
+  glift.objTest();
 
   glift.themes.themesTest();
 
