--- a/src/htmltests/BaseWidgetTest.html
+++ b/src/htmltests/BaseWidgetTest.html
@@ -20,6 +20,7 @@
 <script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
+<script type="text/javascript" src="../util/object.js"></script>
 <script type="text/javascript" src="../util/performance.js"></script>
 <script type="text/javascript" src="../util/platform.js"></script>
 <script type="text/javascript" src="../util/point.js"></script>
