Fix scrolling within comment box. maybe.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -44,7 +44,7 @@
 <script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
-<script type="text/javascript" src="../util/object.js"></script>
+<script type="text/javascript" src="../util/obj.js"></script>
 <script type="text/javascript" src="../util/performance.js"></script>
 <script type="text/javascript" src="../util/platform.js"></script>
 <script type="text/javascript" src="../util/point.js"></script>
@@ -53,6 +53,7 @@
 <!-- Dom -->
 <script type="text/javascript" src="../dom/dom.js"></script>
 <script type="text/javascript" src="../dom/sanitize.js"></script>
+<script type="text/javascript" src="../dom/ux.js"></script>
 <!-- Ajax -->
 <script type="text/javascript" src="../ajax/ajax.js"></script>
 <!-- Themes -->
