--- a/src/htmltests/IconBarTester.html
+++ b/src/htmltests/IconBarTester.html
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
-<script type="text/javascript" src="../util/object.js"></script>
+<script type="text/javascript" src="../util/obj.js"></script>
 <script type="text/javascript" src="../util/performance.js"></script>
 <script type="text/javascript" src="../util/platform.js"></script>
 <script type="text/javascript" src="../util/point.js"></script>
@@ -29,6 +29,7 @@
 <!-- Dom -->
 <script type="text/javascript" src="../dom/dom.js"></script>
 <script type="text/javascript" src="../dom/sanitize.js"></script>
+<script type="text/javascript" src="../dom/ux.js"></script>
 <!-- Ajax -->
 <script type="text/javascript" src="../ajax/ajax.js"></script>
 <!-- Themes -->
