--- a/src/htmltests/ThemeTester.html
+++ b/src/htmltests/ThemeTester.html
@@ -4,6 +4,7 @@
 
 <title> Theme Tester </title>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
+<script type="text/javascript" src="../testdata/gogameguru_commentary.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
@@ -19,7 +20,7 @@
 <script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/key_mappings.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
-<script type="text/javascript" src="../util/object.js"></script>
+<script type="text/javascript" src="../util/obj.js"></script>
 <script type="text/javascript" src="../util/performance.js"></script>
 <script type="text/javascript" src="../util/platform.js"></script>
 <script type="text/javascript" src="../util/point.js"></script>
@@ -28,6 +29,7 @@
 <!-- Dom -->
 <script type="text/javascript" src="../dom/dom.js"></script>
 <script type="text/javascript" src="../dom/sanitize.js"></script>
+<script type="text/javascript" src="../dom/ux.js"></script>
 <!-- Ajax -->
 <script type="text/javascript" src="../ajax/ajax.js"></script>
 <!-- Themes -->
@@ -138,32 +140,32 @@
       }
       #glift_display1 {
         position:relative;
-        width: 500px;
+        width: 100%;
         height: 500px;
       }
       #glift_display2 {
         position:relative;
-        width: 600px;
+        width: 100%;
         height: 600px;
       }
       #glift_display3 {
         position:relative;
-        width: 500px;
+        width: 100%;
         height: 500px;
       }
       #glift_display4 {
         position:relative;
-        width: 500px;
+        width: 100%;
         height: 500px;
       }
       #glift_display5 {
         position:relative;
-        width: 500px;
+        width: 100%;
         height: 500px;
       }
       #glift_display6 {
         position:relative;
-        width: 500px;
+        width: 100%;
         height: 500px;
       }
     </style>
@@ -180,14 +182,14 @@
     <div id="extra_info"></div>
     <script type="text/javascript">
       var basicProblem = glift.create({
-        sgf: testdata.sgfs.complexproblem,
+        sgf: testdata.gogameguru_commentary,
         divId: 'glift_display1',
         display: {
           theme: 'DEFAULT',
         }
       });
       var basicProblem2 = glift.create({
-        sgf: testdata.sgfs.complexproblem,
+        sgf: testdata.gogameguru_commentary,
         divId: 'glift_display2',
         display: {
           theme: 'DEPTH',
@@ -195,28 +197,28 @@
         }
       });
       var basicProblem3 = glift.create({
-        sgf: testdata.sgfs.complexproblem,
+        sgf: testdata.gogameguru_commentary,
         divId: 'glift_display3',
         display: {
           theme: 'TEXTBOOK',
         }
       });
       var basicProblem4 = glift.create({
-        sgf: testdata.sgfs.complexproblem,
+        sgf: testdata.gogameguru_commentary,
         divId: 'glift_display4',
         display: {
           theme: 'MOODY',
         }
       });
       var basicProblem5 = glift.create({
-        sgf: testdata.sgfs.complexproblem,
+        sgf: testdata.gogameguru_commentary,
         divId: 'glift_display5',
         display: {
           theme: 'TRANSPARENT',
         }
       });
       var basicProblem5 = glift.create({
-        sgf: testdata.sgfs.complexproblem,
+        sgf: testdata.gogameguru_commentary,
         divId: 'glift_display6',
         display: {
           theme: 'COLORFUL',
