--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -111,8 +111,8 @@
 <script type="text/javascript" src="../bridge/intersections.js"></script>
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
-<script type="text/javascript" src="../widgets/base_widget.js"></script>
 <script type="text/javascript" src="../widgets/manager.js"></script>
+<script type="text/javascript" src="../widgets/widget.js"></script>
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
 <script type="text/javascript" src="../widgets/options/base_options.js"></script>
