--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -106,8 +106,12 @@
 <!-- Bridge -->
 <script type="text/javascript" src="../bridge/bridge.js"></script>
 <script type="text/javascript" src="../bridge/cropping.js"></script>
-<script type="text/javascript" src="../bridge/flattener.js"></script>
 <script type="text/javascript" src="../bridge/intersections.js"></script>
+<!-- Flattener -->
+<script type="text/javascript" src="../flattener/flattener.js"></script>
+<script type="text/javascript" src="../flattener/flattened.js"></script>
+<script type="text/javascript" src="../flattener/intersection.js"></script>
+<script type="text/javascript" src="../flattener/symbols.js"></script>
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/manager.js"></script>
