--- a/src/htmltests/BoardEditorTester.html
+++ b/src/htmltests/BoardEditorTester.html
@@ -110,6 +110,7 @@
 <script type="text/javascript" src="../bridge/intersections.js"></script>
 <!-- Flattener -->
 <script type="text/javascript" src="../flattener/flattener.js"></script>
+<script type="text/javascript" src="../flattener/board.js"></script>
 <script type="text/javascript" src="../flattener/flattened.js"></script>
 <script type="text/javascript" src="../flattener/intersection.js"></script>
 <script type="text/javascript" src="../flattener/symbols.js"></script>
