Add board-transform, board tests, fix cropbox mistake.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -204,6 +204,7 @@
 <script type="text/javascript" src="../bridge/cropping_test.js"></script>
 <script type="text/javascript" src="../bridge/intersections_test.js"></script>
 <!-- Flattener Tests -->
+<script type="text/javascript" src="../flattener/board_test.js"></script>
 <script type="text/javascript" src="../flattener/flattener_test.js"></script>
 <script type="text/javascript" src="../flattener/intersection_test.js"></script>
 <script type="text/javascript" src="../flattener/symbols_test.js"></script>
@@ -275,6 +276,7 @@ $(document).ready(function() {
 
   glift.flattener.symbolsTest();
   glift.flattener.intersectionTest();
+  glift.flattener.boardTest();
   glift.flattener.flattenTest();
 
   // And finally: an end to end test!
