Finish adding alias to Glift for SGF Strings.

--- a/src/htmltests/AjaxProblemTester.html
+++ b/src/htmltests/AjaxProblemTester.html
@@ -149,17 +149,17 @@
       <script type="text/javascript">
         //glift.global.performanceDebugLevel = 'info'
         var basicProblem = glift.create({
-          divId: "glift_display1",
+          divId: 'glift_display1',
           sgfCollection: [
             {
-              url: "../testdata/problem9.sgf",
+              url: '../testdata/problem9.sgf',
               initialPosition: '1'
             },
-            "../testdata/problem10.sgf",
-            "../testdata/ajax3_13.sgf",
-            "../testdata/ajax_problem.sgf",
-            "../testdata/ajax_problem2.sgf",
-            "../testdata/9x9prob.sgf"
+            '../testdata/problem10.sgf',
+            '../testdata/ajax3_13.sgf',
+            '../testdata/ajax_problem.sgf',
+            '../testdata/ajax_problem2.sgf',
+            '../testdata/9x9prob.sgf'
           ],
           sgfDefaults: {
             widgetType: 'STANDARD_PROBLEM'
