Add enum-to-camelCase converter.  fix bug in flattener (parsePaths vs parseFragments)

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -155,6 +155,7 @@
 <script type="text/javascript" src=".././glift_test.js"></script>
 <!-- Util Tests -->
 <script type="text/javascript" src="../util/array_test.js"></script>
+<script type="text/javascript" src="../util/enums_test.js"></script>
 <script type="text/javascript" src="../util/key_mappings_test.js"></script>
 <script type="text/javascript" src="../util/obj_test.js"></script>
 <script type="text/javascript" src="../util/point_test.js"></script>
@@ -220,6 +221,7 @@
 $(document).ready(function() {
   // glift.debugOn = true;
   glift.utilTest();
+  glift.enumsTest();
   glift.util.pointTest();
   glift.keyMappingsTest();
   glift.arrayTest();
