Add parseType option. In addition adding PANDANET and TYGEM parse types.

--- a/src/htmltests/AjaxProblemTester.html
+++ b/src/htmltests/AjaxProblemTester.html
@@ -92,11 +92,12 @@
 <script type="text/javascript" src="../rules/treepath.js"></script>
 <!-- Sgf -->
 <script type="text/javascript" src="../sgf/sgf.js"></script>
-<script type="text/javascript" src="../sgf/parser.js"></script>
 <script type="text/javascript" src="../sgf/props.js"></script>
-<!-- Gib -->
-<script type="text/javascript" src="../gib/gib.js"></script>
-<script type="text/javascript" src="../gib/parser.js"></script>
+<!-- Parse -->
+<script type="text/javascript" src="../parse/parse.js"></script>
+<script type="text/javascript" src="../parse/pandanet.js"></script>
+<script type="text/javascript" src="../parse/sgf_parser.js"></script>
+<script type="text/javascript" src="../parse/tygem.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="../controllers/controllers.js"></script>
 <script type="text/javascript" src="../controllers/base.js"></script>
