--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -117,11 +117,12 @@
 <script type="text/javascript" src="../rules/treepath.js"></script>
 <!-- Sgf -->
 <script type="text/javascript" src="../sgf/sgf.js"></script>
-<script type="text/javascript" src="../sgf/parser.js"></script>
 <script type="text/javascript" src="../sgf/props.js"></script>
-<!-- Gib -->
-<script type="text/javascript" src="../gib/gib.js"></script>
-<script type="text/javascript" src="../gib/parser.js"></script>
+<!-- Parse -->
+<script type="text/javascript" src="../parse/parse.js"></script>
+<script type="text/javascript" src="../parse/pandanet.js"></script>
+<script type="text/javascript" src="../parse/sgf_parser.js"></script>
+<script type="text/javascript" src="../parse/tygem.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="../controllers/controllers.js"></script>
 <script type="text/javascript" src="../controllers/base.js"></script>
@@ -191,10 +192,11 @@
 <script type="text/javascript" src="../rules/treepath_nextmoves_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
 <!-- Sgf Tests -->
-<script type="text/javascript" src="../sgf/parser_test.js"></script>
 <script type="text/javascript" src="../sgf/sgf_test.js"></script>
-<!-- Gib Tests -->
-<script type="text/javascript" src="../gib/parser_test.js"></script>
+<!-- Parse Tests -->
+<script type="text/javascript" src="../parse/pandanet_test.js"></script>
+<script type="text/javascript" src="../parse/sgf_parsing_test.js"></script>
+<script type="text/javascript" src="../parse/tygem_test.js"></script>
 <!-- Controllers Tests -->
 <script type="text/javascript" src="../controllers/base_test.js"></script>
 <script type="text/javascript" src="../controllers/board_editor_test.js"></script>
@@ -248,9 +250,11 @@ $(document).ready(function() {
 
   // TODO(kashomon): recreate the board tests.
 
-  glift.sgf.newParserTest();
   glift.sgf.sgfTest();
-  glift.gib.gibParserTest();
+
+  glift.parse.sgfTest();
+  glift.parse.tygemTest();
+  glift.parse.pandanetTest();
 
   glift.rules.movetreeTest();
   glift.rules.movenodeTest();
