Add a parse test method.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -195,6 +195,7 @@
 <script type="text/javascript" src="../sgf/sgf_test.js"></script>
 <!-- Parse Tests -->
 <script type="text/javascript" src="../parse/pandanet_test.js"></script>
+<script type="text/javascript" src="../parse/parse_test.js"></script>
 <script type="text/javascript" src="../parse/sgf_parsing_test.js"></script>
 <script type="text/javascript" src="../parse/tygem_test.js"></script>
 <!-- Controllers Tests -->
@@ -252,6 +253,7 @@ $(document).ready(function() {
 
   glift.sgf.sgfTest();
 
+  glift.parse.parseTest();
   glift.parse.sgfTest();
   glift.parse.tygemTest();
   glift.parse.pandanetTest();
