Begin refactoring the status bar to make way for the jump-to-widget button. thing.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -102,6 +102,8 @@
 <script type="text/javascript" src="../displays/svg/svgobj.js"></script>
 <!-- Displays statusbar -->
 <script type="text/javascript" src="../displays/statusbar/statusbar.js"></script>
+<script type="text/javascript" src="../displays/statusbar/fullscreen.js"></script>
+<script type="text/javascript" src="../displays/statusbar/gameinfo.js"></script>
 <!-- Displays position -->
 <script type="text/javascript" src="../displays/position/position.js"></script>
 <script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
