Fix depgen again. stub out markdown.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -235,6 +235,8 @@ $(document).ready(function() {
 
   glift.themes.themesTest();
 
+  //glift.markdown.parseTest();
+
   glift.displays.bboxTest();
   glift.displays.cropboxTest();
   glift.displays.resizedBoxTest();
