--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -41,6 +41,9 @@
 <script type="text/javascript" src="../themes/moody.js"></script>
 <script type="text/javascript" src="../themes/textbook.js"></script>
 <script type="text/javascript" src="../themes/transparent.js"></script>
+<!-- Markdown -->
+<script type="text/javascript" src="../markdown/markdown.js"></script>
+<script type="text/javascript" src="../markdown/markdownjs-uncompiled.js"></script>
 <!-- Displays -->
 <script type="text/javascript" src="../displays/displays.js"></script>
 <script type="text/javascript" src="../displays/bbox.js"></script>
