--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -41,7 +41,7 @@
 <script type="text/javascript" src="../themes/transparent.js"></script>
 <!-- Markdown -->
 <script type="text/javascript" src="../markdown/markdown.js"></script>
-<script type="text/javascript" src="../markdown/markdownjs-uncompiled.js"></script>
+<script type="text/javascript" src="../markdown/marked.js"></script>
 <!-- Displays -->
 <script type="text/javascript" src="../displays/displays.js"></script>
 <script type="text/javascript" src="../displays/bbox.js"></script>
