--- a/src/htmltests/ThemeTester.html
+++ b/src/htmltests/ThemeTester.html
@@ -28,6 +28,7 @@
 <script type="text/javascript" src="../util/test_util.js"></script>
 <!-- Dom -->
 <script type="text/javascript" src="../dom/dom.js"></script>
+<script type="text/javascript" src="../dom/classes.js"></script>
 <script type="text/javascript" src="../dom/sanitize.js"></script>
 <script type="text/javascript" src="../dom/ux.js"></script>
 <!-- Ajax -->
