Completely redesign cropping to be robust to edge cases.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -140,7 +140,9 @@
 <script type="text/javascript" src="../bridge/intersections.js"></script>
 <!-- Orientation -->
 <script type="text/javascript" src="../orientation/orientation.js"></script>
+<script type="text/javascript" src="../orientation/cropbox.js"></script>
 <script type="text/javascript" src="../orientation/cropping.js"></script>
+<script type="text/javascript" src="../orientation/min_bbox.js"></script>
 <script type="text/javascript" src="../orientation/rotate.js"></script>
 <!-- Flattener -->
 <script type="text/javascript" src="../flattener/flattener.js"></script>
@@ -218,7 +220,9 @@
 <!-- Bridge Tests -->
 <script type="text/javascript" src="../bridge/intersections_test.js"></script>
 <!-- Orientation Tests -->
+<script type="text/javascript" src="../orientation/cropbox_test.js"></script>
 <script type="text/javascript" src="../orientation/cropping_test.js"></script>
+<script type="text/javascript" src="../orientation/min_bbox_test.js"></script>
 <script type="text/javascript" src="../orientation/rotate_test.js"></script>
 <!-- Flattener Tests -->
 <script type="text/javascript" src="../flattener/board_test.js"></script>
