--- a/src/htmltests/ThemeTester.html
+++ b/src/htmltests/ThemeTester.html
@@ -116,7 +116,9 @@
 <script type="text/javascript" src="../bridge/intersections.js"></script>
 <!-- Orientation -->
 <script type="text/javascript" src="../orientation/orientation.js"></script>
+<script type="text/javascript" src="../orientation/cropbox.js"></script>
 <script type="text/javascript" src="../orientation/cropping.js"></script>
+<script type="text/javascript" src="../orientation/min_bbox.js"></script>
 <script type="text/javascript" src="../orientation/rotate.js"></script>
 <!-- Flattener -->
 <script type="text/javascript" src="../flattener/flattener.js"></script>
