--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -72,7 +72,7 @@
 <script type="text/javascript" src="../displays/displays.js"></script>
 <script type="text/javascript" src="../displays/bbox.js"></script>
 <script type="text/javascript" src="../displays/board_points.js"></script>
-<script type="text/javascript" src="../displays/cropbox.js"></script>
+<script type="text/javascript" src="../displays/cropbox_wrapper.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
@@ -181,7 +181,7 @@
 <!-- Displays Tests -->
 <script type="text/javascript" src="../displays/bbox_test.js"></script>
 <script type="text/javascript" src="../displays/board_points_test.js"></script>
-<script type="text/javascript" src="../displays/cropbox_test.js"></script>
+<script type="text/javascript" src="../displays/cropbox_wrapper_test.js"></script>
 <script type="text/javascript" src="../displays/environment_test.js"></script>
 <script type="text/javascript" src="../displays/ids_test.js"></script>
 <script type="text/javascript" src="../displays/resized_box_test.js"></script>
