--- a/src/htmltests/TextOnlyTester.html
+++ b/src/htmltests/TextOnlyTester.html
@@ -47,7 +47,7 @@
 <script type="text/javascript" src="../displays/displays.js"></script>
 <script type="text/javascript" src="../displays/bbox.js"></script>
 <script type="text/javascript" src="../displays/board_points.js"></script>
-<script type="text/javascript" src="../displays/cropbox.js"></script>
+<script type="text/javascript" src="../displays/cropbox_wrapper.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
