--- a/src/htmltests/PositionTester.html
+++ b/src/htmltests/PositionTester.html
@@ -109,6 +109,7 @@
 <script type="text/javascript" src="../controllers/controllers.js"></script>
 <script type="text/javascript" src="../controllers/base.js"></script>
 <script type="text/javascript" src="../controllers/board_editor.js"></script>
+<script type="text/javascript" src="../controllers/game_slice.js"></script>
 <script type="text/javascript" src="../controllers/game_viewer.js"></script>
 <script type="text/javascript" src="../controllers/static_problem.js"></script>
 <!-- Bridge -->
@@ -136,6 +137,7 @@
 <script type="text/javascript" src="../widgets/options/board_editor.js"></script>
 <script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/example_options.js"></script>
+<script type="text/javascript" src="../widgets/options/game_slice_options.js"></script>
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
 <script type="text/javascript" src="../widgets/options/reduced_game_viewer.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
