--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 
+<title> QunitTest </title>
 <script type="text/javascript" src="../libs/jquery-1.10.2.min.js"></script>
 <link rel="stylesheet" href="../libs/qunit.css" type="text/css" media="screen" />
 <script type="text/javascript" src="../libs/qunit.js"></script>
@@ -133,6 +134,7 @@
 <script type="text/javascript" src="../controllers/controllers.js"></script>
 <script type="text/javascript" src="../controllers/base.js"></script>
 <script type="text/javascript" src="../controllers/board_editor.js"></script>
+<script type="text/javascript" src="../controllers/game_slice.js"></script>
 <script type="text/javascript" src="../controllers/game_viewer.js"></script>
 <script type="text/javascript" src="../controllers/static_problem.js"></script>
 <!-- Bridge -->
@@ -160,6 +162,7 @@
 <script type="text/javascript" src="../widgets/options/board_editor.js"></script>
 <script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/example_options.js"></script>
+<script type="text/javascript" src="../widgets/options/game_slice_options.js"></script>
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
 <script type="text/javascript" src="../widgets/options/reduced_game_viewer.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
