--- a/src/htmltests/TextOnlyTester.html
+++ b/src/htmltests/TextOnlyTester.html
@@ -108,6 +108,7 @@
 <script type="text/javascript" src="../controllers/controllers.js"></script>
 <script type="text/javascript" src="../controllers/base.js"></script>
 <script type="text/javascript" src="../controllers/board_editor.js"></script>
+<script type="text/javascript" src="../controllers/game_slice.js"></script>
 <script type="text/javascript" src="../controllers/game_viewer.js"></script>
 <script type="text/javascript" src="../controllers/static_problem.js"></script>
 <!-- Bridge -->
@@ -135,6 +136,7 @@
 <script type="text/javascript" src="../widgets/options/board_editor.js"></script>
 <script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/example_options.js"></script>
+<script type="text/javascript" src="../widgets/options/game_slice_options.js"></script>
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
 <script type="text/javascript" src="../widgets/options/reduced_game_viewer.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
