Add a workspace for when we migrate to Bazel and a testing BUILD file.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -32,7 +32,7 @@
 <!-- <script type="text/javascript" src="testdata/sgfs.js"></script> -->
 
 <!-- AUTO-GEN-DEPS -->
-<!-- Otre -->
+<!-- Glift -->
 <script type="text/javascript" src=".././glift.js"></script>
 <script type="text/javascript" src=".././global.js"></script>
 <script type="text/javascript" src=".././init.js"></script>
@@ -166,7 +166,7 @@
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
 <script type="text/javascript" src="../widgets/options/reduced_game_viewer.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
-<!-- Otre Tests -->
+<!-- Glift Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
 <!-- Util Tests -->
 <script type="text/javascript" src="../util/array_test.js"></script>
