--- a/src/htmltests/TygemGameTester.html
+++ b/src/htmltests/TygemGameTester.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="../testdata/tygem_example.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
-<!-- Otre -->
+<!-- Glift -->
 <script type="text/javascript" src=".././glift.js"></script>
 <script type="text/javascript" src=".././global.js"></script>
 <script type="text/javascript" src=".././init.js"></script>
