--- a/src/htmltests/KogosTester.html
+++ b/src/htmltests/KogosTester.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="../testdata/kogos3.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
-<!-- Otre -->
+<!-- Glift -->
 <script type="text/javascript" src=".././glift.js"></script>
 <script type="text/javascript" src=".././global.js"></script>
 <script type="text/javascript" src=".././init.js"></script>
